F&GDEV/src/objects/PD_Plan_Code__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMWB_Status__c</fullName>
        <label>GMWB Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always Included</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyDB_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option_Code__c</fullName>
        <label>Option Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code_ID__c</fullName>
        <label>Plan Code ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code_Option_Code__c</fullName>
        <formula>if(not(isblank(Option_Code__c)),

Plan_Code__c&amp;&quot; - &quot;&amp;Option_Code__c,

Plan_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Code Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;**&quot;</defaultValue>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>PD Plan Code</label>
    <listViews>
        <fullName>Active_Plan_Codes</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code_Option_Code__c</columns>
        <columns>Description__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>State__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Plan Codes</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code_Option_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Option_Code__c</columns>
        <columns>Short_Description__c</columns>
        <columns>State__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC - {0000}</displayFormat>
        <label>Plan Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PD Plan Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>